Share the code for deleting service company and updating yukon list entries